remove overflow-x: hidden in index.css for scroll to top issue

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -20,10 +20,10 @@ html {
 body {
   width: 100%;
   height: 100%;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 :root {
@@ -32,5 +32,5 @@ body {
   min-height: 100vh;
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
-  font-size: 15px;
+  font-size: 16 px;
 }
